5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1861_1286.log
== TEST (2019-06-26 18:06:29) 
-- CODE:
from numpy import* 
from numpy.linalg import*
nome=int(input("nome de cada frutas:"))
frutas=array(eval(input([x,y,z])))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:07:54) 
-- CODE:
from numpy import* 
from numpy.linalg import*
nome=int(input("nome de cada frutas:"))
frutas=array(eval(input([x,y,z])))
matriz=zeros([3])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:09:34) 
-- CODE:
from numpy import* 
from numpy.linalg import*
nome=int(input("nome de cada frutas:"))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
matriz=zeros([3])
-- EXECUTION TIME:
1.00284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/1286/main.py", line 3, in <module>
    nome=int(input())
ValueError: invalid literal for int() with base 10: '[2375,3375,3875]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:09:45) 
-- CODE:
from numpy import* 
from numpy.linalg import*
nome=int(input("nome de cada frutas:"))
frutas=array([[10,20,30],[50,40,10],[30,10,40]])
matriz=zeros([3])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:11:13) 
-- CODE:
from numpy import* 
from numpy.linalg import*
nome=int(input("nome de cada frutas:"))
mat=array([[10,20,30],[50,40,10],[30,10,40]])
vetor=[x,y,z]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:11:26) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array([[10,20,30],[50,40,10],[30,10,40]])
vetor=[x,y,z]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:11:45) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array([[10,20,30],[50,40,10],[30,10,40]])
vetor=zeros([x,y,z])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:21:29) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidade= array(x,y,z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:22:05) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidade= array([130,310,240])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:33) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidade= array([130,310,240])
quantidade=qauntidade.T
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:43) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidade= array([130,310,240])
quantidade=quantidade.T
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:24:07) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidade= array([130,310,240])
quantidade=quantidade.T
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:11) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas.[0],1)
print("manga:",round(frutas.[1],1))


-- ERROR:
File "XXXX", line 5
    print("abacate:",round(frutas.[0],1)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:21) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas.[0],0)
print("manga:",round(frutas.[1],1))


-- ERROR:
File "XXXX", line 5
    print("abacate:",round(frutas.[0],0)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:33) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas,[0],0)
print("manga:",round(frutas.[1],1))


-- ERROR:
File "XXXX", line 6
    print("manga:",round(frutas.[1],1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:48) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas,[0],0)
print("manga:",round(frutas,[1],1))


-- ERROR:
File "XXXX", line 6
    print("manga:",round(frutas,[1],1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:08) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas,[0],0)
print("manga:",round(frutas,[0],1))


-- ERROR:
File "XXXX", line 6
    print("manga:",round(frutas,[0],1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:27) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas,0)
print("manga:",round(frutas,0))


-- ERROR:
File "XXXX", line 6
    print("manga:",round(frutas,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:56) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas,0)
print("Manga:",round(frutas,0))


-- ERROR:
File "XXXX", line 6
    print("Manga:",round(frutas,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:32:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas,0))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:11) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
print("abacate:",round(frutas,0))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:40) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate:",round(frutas,0))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate:",round(frutas.T,0))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:10) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate:",round(frutas.T[0]))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:17) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate:",round(frutas[0]))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:22) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate:",round(frutas,[0]))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:32) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate:",round(frutas[0],0))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:43) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate:",round(frutas[0],1))
print("manga:",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:34:45) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate:",round(frutas[0],1))
print("manga:",round(frutas,0))
		


-- EXECUTION TIME:
1.29321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/1286/main.py", line 6, in <module>
    print("abacate:",round(frutas[0],1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:18) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
frutas=frutas.T
print("abacate: ",round(frutas[0],1))
print("manga: ",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:37) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=frutas[3]
print("abacate: ",round(frutas[0],1))
print("manga: ",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:44) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=fruta[3]
print("abacate: ",round(frutas[0],1))
print("manga: ",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:51) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=fruta([3])
print("abacate: ",round(frutas[0],1))
print("manga: ",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:38:51) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=int(input(""))
print("abacate: ",round(frutas[0],1))
print("manga: ",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:39:23) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=int(input(""))
print("abacate: ",round(frutas[0],1))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:39:32) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=int(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:41:36) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=int(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:43:36) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=int(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
		


-- ERROR:
File "XXXX", line 15
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:43:49) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=int(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
-- ERROR:
File "XXXX", line 13
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:44:45) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=int(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:45:25) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=float(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:46:16) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=dot(inv(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    print("abacate: ",round(frutas,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:46:39) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=dot(inv(input(""))
print("abacate: ",round(frutas[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    print("abacate: ",round(frutas[0]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:46:48) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=dot(inv(input(""))
print("abacate: ",round(frutas[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    print("abacate: ",round(frutas[0],0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:03) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=dot(inv(input(""))
print("abacate: ",round(quantidades[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    print("abacate: ",round(quantidades[0],0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:19) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=dot(inv(frutas))
print("abacate: ",round(quantidades[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:48:38) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=int(input(""))
vetor=dot(inv(frutas(quantidades)))
print("abacate: ",round(quantidades[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:49:10) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=float(input(""))
vetor=dot(inv(frutas(quantidades)))
print("abacate: ",round(quantidades[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:49:52) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
vetor=dot(inv(frutas(quantidades)))
print("abacate: ",round(quantidades[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:49:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
vetor=dot(inv(frutas(quantidades)))
print("abacate: ",round(quantidades[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- EXECUTION TIME:
1.04013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/1286/main.py", line 6, in <module>
    vetor=dot(inv(frutas(quantidades)))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:49:55) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
vetor=dot(inv(frutas(quantidades)))
print("abacate: ",round(quantidades[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:50:33) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
print("abacate: ",round(quantidades[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:51:01) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
print("abacate: ",round(quantidades,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:51:27) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:51:56) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
print("abacate: ",round(frutas,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:52:20) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
print("abacate: ",round(frutas,[0],0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:52:42) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(input(""))
print("abacate: ",round(frutas,[0],1))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:17:51) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
print("abacate: ",round(frutas,[0],1))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    print("abacate: ",round(frutas,[0],1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:18:08) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    print("abacate: ",round(frutas,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:18:25) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
print("abacate: ",round(quantidade,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    print("abacate: ",round(quantidade,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:18:40) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    print("abacate: ",round(quantidade,[0]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:21:26) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=dot(inv(frutas),quantidade))
print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=dot(inv(frutas),quantidade))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:21:38) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=dot(inv(frutas),quantidade))

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=dot(inv(frutas),quantidade))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:22:48) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=array(inv(frutas),quantidade))

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=array(inv(frutas),quantidade))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:22:56) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=array(eval(frutas),quantidade))

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=array(eval(frutas),quantidade))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:23:06) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=array(frutas),quantidade)

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=array(frutas),quantidade)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:23:17) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=array((frutas),quantidade)

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=array((frutas),quantidade)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:23:27) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=ones((frutas),quantidade)

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=ones((frutas),quantidade)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:23:34) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=zeros((frutas),quantidade)

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=zeros((frutas),quantidade)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:25:01) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=dot(inv((frutas),quantidade.T)

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=dot(inv((frutas),quantidade.T)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:25:21) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=dot(inv((frutas),quantidade.T)

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")
-- ERROR:
File "XXXX", line 6
    menos=dot(inv((frutas),quantidade.T)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:26:18) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
menos=zeros(3,dtype=int)

print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    menos=zeros(3,dtype=int)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:27:08) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
for i in range[3]
print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    print("abacate: ",round(quantidade,[0]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:27:21) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
for i in range(3)
print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    print("abacate: ",round(quantidade,[0]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:27:26) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
for i in range(3):
						
print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    for i in range(3):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:27:36) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
	for i in range(3):
						
print("abacate: ",round(quantidade,[0]))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    for i in range(3):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:29:22) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
							
						
	print("abacate: ",round(quantidade,[0]))
	print("manga: ",round(frutas,0))
	print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    print("abacate: ",round(quantidade,[0]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:29:35) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
							
						
	print("abacate: ",round(frutas,[0]))
	print("manga: ",round(frutas,0))
	print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    print("abacate: ",round(frutas,[0]))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:29:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
							
						
	print("abacate: ",round(frutas,[0],1))
	print("manga: ",round(frutas,0))
	print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    print("abacate: ",round(frutas,[0],1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:30:01) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
							
						
	print("abacate: ",round(frutas,[0],0))
	print("manga: ",round(frutas,0))
	print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    print("abacate: ",round(frutas,[0],0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:30:11) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
							
						
	print("abacate: ",round(frutas,0))
	print("manga: ",round(frutas,0))
	print("pera: ",round(frutas,0))

if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    print("abacate: ",round(frutas,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:30:29) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
							
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    print("abacate: ",round(frutas,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:30:38) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
							
						
		print("abacate: ",round(frutas,0))
	print("manga: ",round(frutas,0))
	print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    print("abacate: ",round(frutas,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:31:17) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))

							
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 9
    print("abacate: ",round(frutas,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:32:13) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
n=array([[5.0],[1.0],[2.0]])
							
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    n=array([[5.0],[1.0],[2.0]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:32:24) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
n=([[5.0],[1.0],[2.0]])
							
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    n=([[5.0],[1.0],[2.0]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:32:36) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
n=float(int([[5.0],[1.0],[2.0]])
							
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    n=float(int([[5.0],[1.0],[2.0]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:33:13) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
n=zeros([3],dtype=float)
							
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    n=zeros([3],dtype=float)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:33:20) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
n=zeros([3],dtype=int)
							
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    n=zeros([3],dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:33:44) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
n=zeros([3],dtype=int)
		
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    n=zeros([3],dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:39:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
matriz=([0,0],[0,0])
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    matriz=([0,0],[0,0])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:40:22) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
matriz=(([0,0],[0,0]))
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    matriz=(([0,0],[0,0]))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:40:35) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
matriz=([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    matriz=([[0,0],[0,0]])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:40:54) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
matriz=array([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    matriz=array([[0,0],[0,0]])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:41:42) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
quantidades=array(eval(input(""))
matriz=array([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 6
    matriz=array([[0,0],[0,0]])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:43:36) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
matriz=array([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    matriz=array([[0,0],[0,0]])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:43:51) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
matriz=([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    matriz=([[0,0],[0,0]])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:44:15) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
mat_nula=([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    mat_nula=([[0,0],[0,0]])
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:44:22) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
mat_nula=array([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    mat_nula=array([[0,0],[0,0]])
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:44:43) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
mat=int(input([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    mat=int(input([[0,0],[0,0]])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:45:35) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
mat=array([[0,0,0],[0,0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    mat=array([[0,0,0],[0,0,0]])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:45:52) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
mat=dot(inv[[0,0,0],[0,0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    mat=dot(inv[[0,0,0],[0,0,0]])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:46:07) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
mat=dot(inv[[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    mat=dot(inv[[0,0],[0,0]])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:46:14) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
mat=dot(inv[[0,0],[0,0]]):
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    mat=dot(inv[[0,0],[0,0]]):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:46:42) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range(n,0)
mat=dot(inv[[0,0],[0,0]]):
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=dot(inv[[0,0],[0,0]]):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:46:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range(n,0)
mat=([[0,0],[0,0]]):
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=([[0,0],[0,0]]):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:47:01) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range(n,0)
mat=array([[0,0],[0,0]]):
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=array([[0,0],[0,0]]):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:47:04) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range(n,0)
mat=array([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=array([[0,0],[0,0]])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:47:09) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range(n,0):
mat=array([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 7
    for i in range(n,0):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:47:25) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range[0]
mat=array([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=array([[0,0],[0,0]])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:47:50) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range[0]
mat=array([[0,0],[0,0]])
for i in range[0]
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=array([[0,0],[0,0]])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:48:25) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range[3]
mat=array([[0,0],[0,0]])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=array([[0,0],[0,0]])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:49:44) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range[3]
mat=array(["vitamina C,","Calcio","magnesio"])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=array(["vitamina C,","Calcio","magnesio"])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:49:53) 
-- CODE:
from numpy import* 
from numpy.linalg import*

frutas=array([[10,20,30],[50,40,10],[30,10,40]])
mat_nula=zeros(3,frutas)
quantidades=array(eval(input(""))
for i in range[3]
mat=(["vitamina C,","Calcio","magnesio"])
						
print("abacate: ",round(frutas,0))
print("manga: ",round(frutas,0))
print("pera: ",round(frutas,0))

	if quantidade[5]:
	print("abacate")
elif quantidade [1]:
	print("manga")
else:
	print("pera")

-- ERROR:
File "XXXX", line 8
    mat=(["vitamina C,","Calcio","magnesio"])
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
